<resources>
    <string name="app_name">Game2048</string>
    <string name="game_title">2048</string>
    <string name="game_tile_2">2</string>
    <string name="game_tile_4">4</string>
    <string name="game_tile_8">8</string>
    <string name="game_tile_16">16</string>
    <string name="game_tile_32">32</string>
    <string name="game_tile_64">64</string>
    <string name="game_tile_128">128</string>
    <string name="game_tile_256">256</string>
    <string name="game_tile_512">512</string>
    <string name="game_tile_1024">1024</string>
    <string name="game_tile_2048">2048</string>
    <string name="game_tile_4096">4096</string>
    <string name="game_tile_8192">8192</string>
    <string name="game_tile_16184">16184</string>
    <string name="game_tile_32368">32368</string>
    <string name="game_btn_new_text">NEW</string>
    <string name="game_btn_undo_text">UNDO</string>
    <string name="game_score_pattern">SCORE\n%d</string>
    <string name="game_best_score_pattern">BEST\n%d</string>
    <string name="game_victory_title">Win</string>
    <string name="game_victory_message">You gathered 2048</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_new_game">New Game</string>
    <string name="in_development">In development</string>
    <string name="game_over_title">Game Over</string>
    <string name="new_game_title">New Game</string>
    <string name="game_over_message">You lost</string>
    <string name="cant_move_left">Can\'t move left</string>
    <string name="cant_move_right">Can\'t move right</string>
    <string name="cant_move_up">Can\'t move up</string>
    <string name="cant_move_down">Can\'t move down</string>
    <string name="new_game_confirm">Start new game?</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="btn_exit">Exit</string>
</resources>